--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   #   url: /publications/
 
   - title: "Research"
-    url: /Research/
+    url: /research/
 
   # - title: "Talks"
   #   url: /talks/    
