--- a/_config.yml
+++ b/_config.yml
@@ -221,6 +221,9 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  researchs:
+    output: true
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -262,6 +265,15 @@ defaults:
   - scope:
       path: ""
       type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
+  # _researchs
+  - scope:
+      path: ""
+      type: researchs
     values:
       layout: single
       author_profile: true
