--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ publication_category:
   manuscripts:
     title: 'Journal Articles' 
   working_paper:
-    title: 'Working Paper'   
+    title: 'Working Papers'   
   conferences:
     title: 'Conference Papers'
 
