--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "qianshuzhang/qianshuzhang.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpg"
+  avatar           : "profile_new.jpg"
   name             : "Qianshu ZHANG"
   pronouns         : # example: "she/her"  
   bio              : "PhD Candidate"
